2006-08-08  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/show.c (show_version): Fix C99-ism by reintroducing
	a pair of braces that had been removed.
	
2006-08-07  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (wxtPanel::wxt_cairo_create_bitmap):
	Use a reference instead of a pointer to avoid misusing an undocumented
	constructor that will be removed in wxWidgets >= 2.7.0.

2006-08-07  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/all.dem: Add rectangle.dem to the standard test set.
	
	* demo/image.dem demo/macros.dem demo/rainbow.dem demo/rectangle.dem:
	Now that we have the configuration options in GPVAL_COMPILE_OPTIONS we
	can use this to test for the presence of optional features needed for
	any particular demo.  These particular demos require configuration
	options that are marked EXPERIMENTAL in version 4.2, so we test for
	the presence of the feature and if it is missing then we print a 
	warning message and skip the rest of the demo.  This allows "make check"
	to succeed even if the EXPERIMENTAL features are configured out.


2006-08-06  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* docs/gnuplot.doc: Document GNUPLOT_PS_DIR in the list of environment
	variables.

	* INSTALL: Likewise.
	Synchronize the output of `./configure --help'.
	Document the requirements of the wxWidgets terminal.

	* configure.in: Remove detection of libpng, useless since the
	standalone png driver has been removed.

	* src/Makefile.am (AM_CPPFLAGS); Remove PREFIX and VERSION_MAJOR, those
	were used by the wxWidgets terminal but are not anymore.

2006-08-05  Ethan A Merritt  <merritt@u.washington.edu>

	* tutorial/tutorial.tex: Update version statement to 4.2

	* src/version.c src/version.h: Global (char *)compile_options.

	* src/show.c (show_version): Save the configuration options string
	produced for "show version long" in (char *)compile_options. If called
	as show_version(NULL), do this and nothing else.
